--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
+    "netlify-cli": "^14.2.1",
     "ngx-file-drop": "^14.0.1",
     "nodemailer": "^6.8.0",
     "path": "^0.12.7"
