--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "apirest-tesis",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.js",
+  "main": "index.js",
   "scripts": {
     "dev": "nodemon index.js",
     "start": "node index.js"
