--- a/vercel.json
+++ b/vercel.json
@@ -23,7 +23,7 @@
             ],
             "headers": {
                 "Access-Control-Allow-Origin": "*",
-                "Access-Control-Allow-Headers": ["Content-Type", "Authorization"]
+                "Access-Control-Allow-Headers": "Content-Type"
             }
         }
     ]
